--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,10 @@ body {
   font-family: 'Josefin Sans', sans-serif;
 }
 
+main {
+  margin: 0 20px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
