--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100px;
   position: fixed;
   left: 0;
   right: 0;
@@ -18,4 +17,11 @@
 .separate {
   border: 1px solid #91CAED;
   width: 90%;
+}
+
+.confCgvContact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
