--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -2,10 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
 }
 
 .wrapperfooter {
@@ -24,4 +20,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 976px) {
+  .copyrigth {
+    display: none;
+  }
 }
