--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -28,7 +28,7 @@
 
 .cart,
 .logo {
-  margin: 24px;
+  margin: 16px;
   object-fit: contain;
 }
 
@@ -37,6 +37,7 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+  z-index: 15;
 }
 
 .navul > li {
@@ -112,7 +113,7 @@
   .navul {
     position: absolute;
     top: 0;
-    margin-top: 100px;
+    margin-top: 120px;
     left: 0;
     flex-direction: column;
     width: 100%;
