--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,13 +5,27 @@ body {
   font-family: 'Josefin Sans', sans-serif;
 }
 
-main {
-  margin: 0 20px;
+body {
+  position: relative;
+  margin: auto;
+  max-width: 1450px;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  font-size: 1.3em;
+  font-weight: 300;
+}
+
+p {
+  font-weight: 300;
+}
+
+h2 {
+  font-size: 1.3em;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
 * {
