--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,14 +11,11 @@ body {
   max-width: 1450px;
 }
 
+p,
 a {
   color: inherit;
   text-decoration: none;
   font-size: 1.3em;
-  font-weight: 300;
-}
-
-p {
   font-weight: 300;
 }
 
