--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -40,6 +40,10 @@
   z-index: 15;
 }
 
+.navli a{
+  padding: 5px 0;
+}
+
 .navul > li {
   margin: 0 1rem;
   overflow: hidden;
@@ -104,6 +108,11 @@
   .searchBar {
     display: none;
   }
+  .cart,
+  .logo {
+    margin: 8px 16px;
+    object-fit: contain;
+  }
   .logoAndNav {
     width: 100%;
   }
@@ -113,7 +122,7 @@
   .navul {
     position: absolute;
     top: 0;
-    margin-top: 120px;
+    margin-top: 100px;
     left: 0;
     flex-direction: column;
     width: 100%;
@@ -129,6 +138,7 @@
   .loop2,
   .searchBar2 {
     display: flex;
+    margin-left: 7px;
   }
   .navSearch {
     display: flex;
@@ -141,7 +151,7 @@
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
   }
   #menuToggle:checked ~ .navul li {
-    border: 1px solid rgb(224, 224, 224);
+    /* border: 1px solid rgb(224, 224, 224); */
     height: 2.5em;
     padding: 0.5em;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -158,7 +168,7 @@
     padding: 0.5em 0;
     width: 100%;
     color: white;
-    background-color: #255a7b;
+    background-color: #255a7bda;
   }
   .navul > li:not(:last-child) {
     border-bottom: 1px solid #444;
