add css styles on home page and add image banner

--- a/styles/Products.module.css
+++ b/styles/Products.module.css
@@ -13,3 +13,8 @@
 .wrapperProducts img {
   border-radius: 5px;
 }
+
+.wrapperProducts img:hover {
+  transform: scale(104%);
+  overflow: hidden;
+}
