--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,14 +1,20 @@
-.bandeau {
+.banner {
   position: relative;
   margin: 0 auto;
   width: 100%;
   height: 55vh;
 }
 
+.imagesProductsBanner,
 .imagesProducts {
   object-fit: cover;
   object-position: 25% 78%;
   border-radius: 5px;
+}
+
+.imagesProducts:hover {
+  transform: scale(104%);
+  overflow: hidden;
 }
 
 .wrapperImageAndCTA {
@@ -38,6 +44,7 @@
 
 .sectionProducts {
   width: 100%;
+  max-width: 1100px;
   height: 100%;
   display: flex;
   justify-content: space-around;
@@ -47,6 +54,10 @@
 
 .sectionProducts h2 {
   font-weight: 400;
+}
+
+.wrapperProducts {
+  text-align: center;
 }
 
 .imagesProducts {
