--- a/styles/ProductDetails.module.css
+++ b/styles/ProductDetails.module.css
@@ -1,12 +1,24 @@
-.productDetailsH1 {
+.productDetailsH1,
+.sectionProductDetails h2 {
     text-align: center;
 }
 
 .sectionProductDetails {
-    max-width:1100px;
+    width: 100%;
+    max-width: 1000px;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
+    
+}
+
+.sectionProductDetails img {
+    border-radius: 5px;
+}
+
+.sectionProductDetails img,
+.sectionProductDetails p {
+    margin: 10px;
 }
