--- a/styles/ProductDetails.module.css
+++ b/styles/ProductDetails.module.css
@@ -22,9 +22,17 @@
   margin-left: 15px;
 }
 
+.wrapperProductDetailsInfos {
+  width: 100%;
+}
+
+.price {
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
 /* Product quantity */
 .quantity {
-  width: 550px;
   display: flex;
   flex-direction: row;
   align-items: center;
