add stripe payement redirection and success page

--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -7,6 +7,7 @@ du panier en cliquant en dehors */
   position: absolute;
   right: 0;
   top: 0;
+  z-index: 95;
   /* will-change: transform; */
   transition: all 1s ease-in-out;
 }
