--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -61,6 +61,8 @@ du panier en cliquant en dehors */
 }
 .product {
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 30px;
   padding: 20px;
 }
@@ -73,38 +75,37 @@ du panier en cliquant en dehors */
 .itemDesc .flex {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 300px;
-  color: #324d67;
 }
-.flex h5 {
+
+.total h5,
+.flex h5,
+.flex h4 {
   font-size: 24px;
 }
-.flex h4 {
-  font-size: 20px;
-}
+
 .total {
   display: flex;
-  justify-content: space-between;
-}
-.total h3 {
-  font-size: 22px;
+  justify-content: space-around;
+  width: 100%;
+  margin: 10px 10px;
 }
 .quantityDesc {
   border: 1px solid gray;
   padding: 6px;
-  margin-left: 10px;
 }
 .quantityDesc span {
   font-size: 16px;
-  padding: 6px 12px;
+  padding: 6px 10px;
   cursor: pointer;
 }
 .quantityDesc .minus {
-  border-right: 1px solid gray;
   color: #f02d34;
 }
 .quantityDesc .num {
   border-right: 1px solid gray;
+  border-left: 1px solid gray;
   font-size: 20px;
 }
 .quantityDesc .plus {
@@ -120,14 +121,16 @@ du panier en cliquant en dehors */
 }
 .cartBottom {
   position: absolute;
-  bottom: 12px;
-  right: 5px;
+  bottom: 0;
+  left: 0;
+  right: 0;
   width: 100%;
-  padding: 30px 65px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .btnContainer {
-  width: 400px;
   margin: auto;
 }
 
@@ -158,5 +161,15 @@ du panier en cliquant en dehors */
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  .product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .flex h5,
+  .flex h4 {
+    font-size: 24px;
+    margin: 0;
   }
 }
