--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -56,20 +56,19 @@ du panier en cliquant en dehors */
 .productContainer {
   margin-top: 15px;
   overflow: auto;
-  max-height: 70vh;
   padding: 20px 10px;
 }
 .product {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 30px;
-  padding: 20px;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 .product .cartProductImage {
-  width: 180px;
-  height: 150px;
-  border-radius: 15px;
+  width: 220px;
+  height: 200px;
+  border-radius: 5px;
   background-color: #ebebeb;
 }
 .itemDesc .flex {
@@ -87,9 +86,8 @@ du panier en cliquant en dehors */
 
 .total {
   display: flex;
-  justify-content: space-around;
-  width: 100%;
-  margin: 10px 10px;
+  justify-content: space-between;
+  width: 300px;
 }
 .quantityDesc {
   border: 1px solid gray;
@@ -120,28 +118,19 @@ du panier en cliquant en dehors */
   border: none;
 }
 .cartBottom {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.btnContainer {
-  margin: auto;
-}
-
 .btn {
-  position: relative;
   margin: 20px auto;
   background-color: #8d3998;
   color: white;
   padding: 10px;
   border-radius: 5px;
-  width: 320px;
+  width: 300px;
   font-size: 1.2em;
   cursor: pointer;
   text-align: center;
