add flower image at the bottom and on top

--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -1,7 +1,7 @@
 .button {
   position: relative;
   margin: 20px auto;
-  background-color: #8D3998;
+  background-color: #a955b4da;
   color: white;
   padding: 10px;
   border-radius: 5px;
