--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,12 +1,48 @@
 .backgroundFooter{
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(0, #a9d4efeb, #e5f5ffe6, #f8fcff77), url('../public/flower.jpg') no-repeat center;
+  background: linear-gradient(0, #a9d4eff0, #e5f5ffe6, #f8fcff62), url('../public/flower.jpg') no-repeat center;
   background-size: contain;
   position: absolute;
   bottom: 0;
   left: 0;
   z-index: -1;
+}
+
+.wrapperImageAndCTA {
+  max-width: 1100px;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 32px auto;
+  text-align: center;
+}
+
+.imagesCaroussel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+}
+
+.wrapperCTA {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.h1 {
+  font-weight: 500;
+  font-size: 2.4em;
+}
+
+.h2 {
+  color: #10A4FE;
+}
+
+.hr {
+  width: 80%;
 }
 
 .imagesProductsBanner,
@@ -24,31 +60,6 @@
   transform: scale(104%);
   transition: transform 0.3s ease;
   overflow: hidden;
-}
-
-.wrapperImageAndCTA {
-  max-width: 1100px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin: 32px auto;
-  text-align: center;
-}
-
-.wrapperCTA {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.h1 {
-  font-weight: 500;
-  font-size: 2.4em;
-  color: #10A4FE;
-}
-
-.hr {
-  width: 80%;
 }
 
 .sectionProducts {
