--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,16 +1,36 @@
+.wrapperHeader {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+}
+
 .header {
+  position: relative;
+  top: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid red;
+}
+
+.flowersAndLogo,
+.logo {
+  display: flex;
+  justify-content:baseline;
+}
+
+.navbar {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.searchAndCart,
-.logoAndNav {
+.searchAndCart {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
-
 
 .loop {
   position: relative;
@@ -86,6 +106,10 @@
   display: none;
 }
 
+.menuButton {
+  transform: translatex(75%);
+}
+
 .menuButton,
 .menuButton::before,
 .menuButton::after {
@@ -132,7 +156,7 @@
     margin: 8px 16px;
     object-fit: contain;
   }
-  .logoAndNav {
+  .navbar {
     width: 100%;
   }
   .menuButtonContainer {
@@ -141,12 +165,13 @@
   .navul {
     position: absolute;
     top: 0;
-    margin-top: 100px;
+    margin-top: 170px;
     left: 0;
     flex-direction: column;
     width: 100%;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
   }
   .searchBar2 {
     border: 1px solid #91caed;
@@ -170,7 +195,6 @@
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
   }
   #menuToggle:checked ~ .navul li {
-    /* border: 1px solid rgb(224, 224, 224); */
     height: 2.5em;
     padding: 0.5em;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
