--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,18 +1,7 @@
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-}
-
-.background {
-  width: 100vw;
-  height: 100vh;
-  background: linear-gradient(180deg, #53b1ebac, #e2eff9ef, #f8fcff30), url('../public/Eclaboussures.png') no-repeat center;
-  background-size: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
 }
 
 .searchAndCart,
